cambiando Static por Carolina

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>CSS POSITION</h1>
     <!-- <div class="scroll"> -->
     <div id="Contenedor-Padre">
-    <div class="static">Static</div>
+    <div class="static">Carolina</div>
     <div class="relative">Relative</div>
     <div class="absolute">Absolute</div>
     <div class="fixed">Fixed</div>
